--- a/index.html
+++ b/index.html
@@ -1107,14 +1107,14 @@ const popupHtml =
      <div class="popup-colonia-body">
        <b>Colonia:</b> ${normalizarTexto(col)}<br>
        <b>Prioridad:</b> <span class="badge-prioridad ${prClass}">${prio}</span><br>` +
-       (gm ? `<b>Grado de marginación:</b> ${gm}<br>` : "") +
+       (gm ? `<b>Grado de marginación 2020:</b> ${gm}<br>` : "") +
        `<b>Manzanas dentro de la colonia:</b> ${numManz.toLocaleString("es-MX")}<br>` +
        (pobTxt ? `<b>Población:</b> ${pobTxt} hab.<br>` : "") +
        (haTxt  ? `<b>Superficie:</b> ${haTxt} ha` : "") +
      `</div>
    </div>`;
 
-   layerColonia
+  layerColonia
   .bindPopup(popupHtml, {
     className: `popup-colonia ${prClass}`
   })
