Simplify legend labels in index.html

--- a/index.html
+++ b/index.html
@@ -116,16 +116,14 @@
         <div class="legend-group">
           <div class="legend-item">
             <span class="legend-color colonias-color"></span>
-            <span class="legend-label">Colonias (contorno)</span>
+            <span class="legend-label">Colonias</span>
           </div>
           <div class="legend-item">
             <span class="legend-color manzanas-color"></span>
-            <span class="legend-label">Manzanas (todas)</span>
+            <span class="legend-label">Manzanas</span>
           </div>
           <div class="legend-item">
             <span class="legend-color manzanas-sel-color"></span>
-            <span class="legend-label">Manzanas dentro de la colonia seleccionada</span>
-          </div>
         </div>
 
         <div class="legend-subtitle">Prioridad de intervención</div>
