--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 
 <main class="container">
 
-  <!-- KPIs Institucionales (DATOS ESTÁTICOS / VISTAZO GENERAL) -->
+<!-- KPIs Institucionales -->
   <section class="kpi-global-section">
-    <div class="kpi-header-title">Vistazo General: Ciudad de México</div>
+    <!-- Título corregido como elemento bloque -->
+    <h3 class="kpi-header-title">Vistazo General: Ciudad de México</h3>
     
     <div class="kpi-global-card">
       <div class="kpi-icon">🏙️</div>
       <div class="kpi-content">
         <div class="kpi-global-label">Total Colonias CDMX</div>
-        <!-- Reemplaza "..." con el número real de tu DB -->
-        <div class="kpi-global-value">2,148</div> 
+        <div class="kpi-global-value">2,148</div>
         <small class="kpi-subtext">Cobertura total</small>
       </div>
     </div>
@@ -48,8 +48,7 @@
       <div class="kpi-icon">⚠️</div>
       <div class="kpi-content">
         <div class="kpi-global-label">Colonias Alta + Muy Alta</div>
-        <!-- Reemplaza con datos reales -->
-        <div class="kpi-global-value">452</div> 
+        <div class="kpi-global-value">452</div>
         <small class="kpi-subtext">21% del total</small>
       </div>
     </div>
@@ -57,8 +56,8 @@
     <div class="kpi-global-card alert">
       <div class="kpi-icon">👥</div>
       <div class="kpi-content">
-        <div class="kpi-global-label">Población Prioritaria (Alta + Muy Alta)</div>
-        <!-- Reemplaza con datos reales -->
+        <!-- Texto Específico Solicitado -->
+        <div class="kpi-global-label">Pob. Prioritaria (Alta y Muy Alta)</div>
         <div class="kpi-global-value">2,105,300</div>
         <small class="kpi-subtext">25% de la pob. total</small>
       </div>
@@ -67,14 +66,12 @@
     <div class="kpi-global-card">
       <div class="kpi-icon">📐</div>
       <div class="kpi-content">
-        <div class="kpi-global-label">Sup. Prioritaria (Alta + Muy Alta)</div>
-        <!-- Reemplaza con datos reales -->
+        <div class="kpi-global-label">Sup. Prioritaria (Alta y Muy Alta)</div>
         <div class="kpi-global-value">15,400</div>
         <small class="kpi-subtext">Hectáreas</small>
       </div>
     </div>
   </section>
-
   <!-- Buscador Específico -->
   <section class="section-block">
     <h2>Localiza tu colonia</h2>
